--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,4 +5,21 @@
 	text-align: center;
 	}
 	
+	header {
+    padding: 0px;
+	margin: 0px 0px;
+    color: white;
+    background-color: lightgrey;
+	font-size: 16px;
+	font-family: sans-serif;
+    text-align: center;
+}
+
+
+
+body.container {
+    width: 100%;
+    border: 1px solid gray;
+}
+	
 	
