--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -13,7 +13,7 @@
     padding: 0px;
 	margin: 0px 0px;
     color: white;
-    background-color: lightgrey;
+    background-color: #ffffff;
 	font-size: 16px;
 	font-family: sans-serif;
     text-align: center;
