--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -12,8 +12,7 @@
 	header {
     padding: 0px;
 	margin: 0px 0px;
-    color: white;
-    background-color: #ffffff;
+    background-color: black;
 	font-size: 16px;
 	font-family: sans-serif;
     text-align: center;
