--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,15 @@
-
+/*
+body.container {
+    width: 100%;
+	background-image: url("/assets/resource/brickwall.png");
+    background-repeat: repeat;
+	/*background-color: lightyellow;*/
+    border: 1px solid gray;
+}
+*/
 body {
-	background-color: #f5f5f5;
-		
+	/*background-color: #f5f5f5;*/
+	background-image: url("https://i.ytimg.com/vi/x_2BeJFJQvA/maxresdefault.jpg");	
 	}
 	
 h4 {
