--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,7 +10,7 @@ body.container {
 body.container {
 	/*background-color: #f5f5f5;*/
 	width: 100%;
-	background-image: url(""/assets/resource/default.jpg"");	
+	background-image: url("/assets/resource/default.jpg");	
 	}
 	
 h4 {
