--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -7,7 +7,7 @@ body.container {
     border: 1px solid gray;
 }
 */
-body.container {
+main {
 	/*background-color: #f5f5f5;*/
 	width: 100%;
 	background-image: url("/assets/resource/default.jpg");	
