--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,16 +1,8 @@
-/*
-body.container {
-    width: 100%;
-	background-image: url("/assets/resource/brickwall.png");
-    background-repeat: repeat;
-	/*background-color: lightyellow;*/
-    border: 1px solid gray;
-}
-*/
-main {
-	/*background-color: #f5f5f5;*/
-	width: 100%;
-	background-image: url("/assets/resource/default.jpg");	
+
+body {
+	background-color: #f5f5f5;
+	/*width: 100%;
+	background-image: url("/assets/resource/default.jpg");	*/
 	}
 	
 h4 {
