--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,31 +1,26 @@
-
 body {
 	background-color: #f5f5f5;
-	/*width: 100%;
+	/* width: 100%;
 	background-image: url("/assets/resource/default.jpg");	*/
-	}
-	
+}
+.logo{
+	font-family: ;
+	font-weight: bold;
+	font-size: 26px;
+}
+.bold{
+	font-weight:bold;
+}
+.text__green{
+	color:#00ff00;
+}
+.text__white{
+	color: #ffffff;
+}
 h4 {
 	text-align: center;
-	}
-	
-header {
-    padding: 0px;
-	margin: 0px 0px;
-    background-color: black;
-	font-size: 16px;
-	font-family: sans-serif;
-    text-align: center;
-}
+}	
 a, #item {
 	color: white;
 }
 
-
-
-body.container {
-    width: 100%;
-    border: 1px solid gray;
-}
-	
-	
