--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,7 +17,12 @@ body {
 .text__white{
 	color: #ffffff;
 }
-h4 {
+.bg__color{
+	background-color:#f5f5f5; 
+	
+
+}
+h1,h2,h4 {
 	text-align: center;
 }	
 a, #item {
