--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -19,8 +19,15 @@ body {
 }
 .bg__color{
 	background-color:#f5f5f5; 
-	
-
+}
+.con_img_size{
+	max-width: 400px;
+	max-width: 400px;
+	min-width: 40px;
+	min-width: 40px;
+}
+.trans{
+	opacity: 0.8;
 }
 h1,h2,h4 {
 	text-align: center;
