--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,5 @@
 body {
 	background-color: #f5f5f5;
-	/* width: 100%;
-	background-image: url("/assets/resource/default.jpg");	*/
 }
 .logo{
 	font-family: ;
@@ -20,21 +18,18 @@ body {
 .bg__color{
 	background-color: rgba(245, 245, 245, 0.7);
 }
-.con_img_size{
-	height:80%;
-	width: height;
-	
-	max-width: 400px;
-	max-height: 400px;
-	min-width: 40px;
-	min-height: 40px;
-}
 .col-centered{
     float: none;
     margin: 0 auto;
 }
-.product .img-responsive {
+.img-responsive {
     margin: 0 auto;
+}
+.foot__img{
+	width:100px;
+}
+.foot__text{
+	color:#9f9f9f;
 }
 h1,h2,h4 {
 	text-align: center;
@@ -42,4 +37,3 @@ h1,h2,h4 {
 a, #item {
 	color: white;
 }
-
