--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,7 +2,7 @@ body {
 	background-color: #f5f5f5;
 }
 .logo{
-	font-family: ;
+	font-family: "fira-sans";
 	font-weight: bold;
 	font-size: 26px;
 }
